# cursor-cli-examples

./: .dockerignore  .gitignore  README.md  SECURITY_LOG.md  pyproject.toml
.cursor/: cli.json  mcp.json
.cursor/rules/: subagents.mdc
.docs-sync/: pr-3-last-synced.txt
.github/: SECURITY_LOG.md
.github/workflows/: auto-fix-ci.yml  auto-fix-conflicts.yml  auto-improve-pr-description.yml  auto-secrets-audit.yml  auto-translate-keys.yml  auto-update-docs-split.yml  auto-update-docs.yml  code-review.yml  fix-ci.yml  fix-conflicts.yml  improve-pr-description.yml  test.yml  translate-keys.yml  update-docs-split.yml  update-docs.yml  visual-testing.yml
.github/workflows.proposed/: code-review.yml  fix-ci.yml  fix-conflicts.yml  improve-pr-description.yml  secrets-audit.yml  test.yml  translate-keys.yml  update-docs.yml  visual-testing.yml
audit/: git_history_last_200.txt
docs/: .last_docs_update  basic.md  web-ui.md
src/cursor_cli_examples/: __init__.py  app.py  main.py
src/cursor_cli_examples/templates/: calculator.html
tests/: test_basic.py  test_main.py  test_power.py
